# serializer version: 1
# name: test_binary_sensors[binary_sensor.erics273-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.erics273',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.ONLINE: 'online'>,
    'unique_id': '2533274913657542_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.erics273-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://images-eds-ssl.xboxlive.com/image?url=rwljod2fPqLqGP3DBV9F_yK9iuxAt3_MH6tcOnQXTc8LY1LO8JeulzCEFHaqqItKdg9oJ84qjO.VNwvUWuq_iR5iTyx1gQsqHSvWLbqIrRI-&background=0xababab&format=png',
      'friendly_name': 'erics273',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.erics273',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.erics273_in_game-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.erics273_in_game',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In game',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.IN_GAME: 'in_game'>,
    'unique_id': '2533274913657542_in_game',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.erics273_in_game-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 In game',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.erics273_in_game',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.erics273_subscribed_to_xbox_game_pass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.erics273_subscribed_to_xbox_game_pass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subscribed to Xbox Game Pass',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.HAS_GAME_PASS: 'has_game_pass'>,
    'unique_id': '2533274913657542_has_game_pass',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.erics273_subscribed_to_xbox_game_pass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'erics273 Subscribed to Xbox Game Pass',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.erics273_subscribed_to_xbox_game_pass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gsr_ae',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.ONLINE: 'online'>,
    'unique_id': '271958441785640_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://images-eds-ssl.xboxlive.com/image?url=wHwbXKif8cus8csoZ03RW_ES.ojiJijNBGRVUbTnZKsoCCCkjlsEJrrMqDkYqs3M0aLOK2kxE9mbLm9M2.R0stAQYoDsGCDJxqDzG9WF3oa4rOCjEK7DbZXdBmBWnMrfErA3M_Q4y_mUTEQLqSAEeYFGlGeCXYsccnQMvEecxRg-&format=png',
      'friendly_name': 'GSR Ae',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gsr_ae',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae_in_game-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gsr_ae_in_game',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In game',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.IN_GAME: 'in_game'>,
    'unique_id': '271958441785640_in_game',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae_in_game-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae In game',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gsr_ae_in_game',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae_subscribed_to_xbox_game_pass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.gsr_ae_subscribed_to_xbox_game_pass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subscribed to Xbox Game Pass',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.HAS_GAME_PASS: 'has_game_pass'>,
    'unique_id': '271958441785640_has_game_pass',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.gsr_ae_subscribed_to_xbox_game_pass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GSR Ae Subscribed to Xbox Game Pass',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.gsr_ae_subscribed_to_xbox_game_pass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ikken_hissatsuu',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.ONLINE: 'online'>,
    'unique_id': '2533274838782903_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'entity_picture': 'https://images-eds-ssl.xboxlive.com/image?url=7OTVnZUMVj4OV2zUUGecWvn3U00nQQLfK7_kwpANogj9vJpb.t4ZQMMLIWOuBZBBZs5MjD7okwh5Zwnit1SAtO3OAsFXxJc1ALIbaVoRo7gsiun9FdcaTpzkM60nqzT8ip1659eQpB1SLyupscP.ec_wAGvXwkhCcTKCNHQMrxg-&format=png',
      'friendly_name': 'Ikken Hissatsuu',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ikken_hissatsuu',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu_in_game-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ikken_hissatsuu_in_game',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'In game',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.IN_GAME: 'in_game'>,
    'unique_id': '2533274838782903_in_game',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu_in_game-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu In game',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ikken_hissatsuu_in_game',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu_subscribed_to_xbox_game_pass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ikken_hissatsuu_subscribed_to_xbox_game_pass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subscribed to Xbox Game Pass',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxBinarySensor.HAS_GAME_PASS: 'has_game_pass'>,
    'unique_id': '2533274838782903_has_game_pass',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ikken_hissatsuu_subscribed_to_xbox_game_pass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ikken Hissatsuu Subscribed to Xbox Game Pass',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ikken_hissatsuu_subscribed_to_xbox_game_pass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
